--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [lts]
+        node-version: [latest]
 
     steps:
     - uses: actions/checkout@v3
