--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "t-since",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Get the difference between a given Date and the current Date in a friendly format: i.e. 1 year, 2 months, 3 days, 4 hours, 5 minutes, 6 seconds",
   "main": "index.js",
   "files": [
-    "index.js"
+    "index.js",
+    "index.d.ts"
   ],
   "scripts": {
     "test": "jest"
