--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "t-since",
-  "version": "1.0.3",
-  "description": "Get the difference between a given Date and the current Date in a friendly format: i.e. 1 year, 2 months, 3 days, 4 hours, 5 minutes, 6 seconds",
+  "version": "2.0.0",
+  "description": "Format the relative time between the current date and a given date in a human readable format. The output is rounded to the nearest time unit, i.e. 1 year ago, 5 minutes ago, in 3 days, in 6 seconds",
   "main": "index.js",
   "files": [
     "index.js",
@@ -15,19 +15,21 @@
     "url": "git+https://github.com/radulucut/t-since.git"
   },
   "keywords": [
-    "timesince",
+    "relative",
     "time",
+    "date",
     "since",
-    "date"
+    "ago",
+    "in"
   ],
   "bugs": {
     "url": "https://github.com/radulucut/t-since/issues"
   },
   "homepage": "https://github.com/radulucut/t-since#readme",
-  "author": "Radu Lucut",
+  "author": "Radu Lucuț",
   "license": "MIT",
   "types": "./index.d.ts",
   "devDependencies": {
-    "jest": "^29.5.0"
+    "jest": "^29.7.0"
   }
 }
